# pytest-coverage-gate

./: .pre-commit-hooks.yaml  LICENSE  README.md  coverage_gate.py  pyproject.toml
.github/workflows/: publish.yml
