[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-coverage-gate"
dynamic = ["version"]
description = "A pre-commit hook that enforces a coverage quality gate using coverage.xml and a baseline file"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["coverage", "pre-commit", "quality-gate", "pytest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
pytest-coverage-gate = "coverage_gate:main"

[tool.setuptools]
py-modules = ["coverage_gate"]

[tool.setuptools_scm]
